--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
-
+<link rel="stylesheet" href="assets/style.css">body {
+    background-color: bisque;
+}
+footer {
+    background-color: rgb(17, 163, 248);
+    color: white;
+}
+footer {
+    background-color: rgb(17, 163, 248);
+    color: white;
+    bottom:0;
+    position:fixed;
+    width:100%;
+}
+footer p{
+    text-align: center;
+    font-size: 0.6rem;
+}
+height:2rem;
+margin-top: 0,5rem;
+font-family: Bai Jamjuree;
