--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,9 @@ footer p{
 height:2rem;
 margin-top: 0,5rem;
 font-family: Bai Jamjuree;
+#container {
+    display:flex ;
+}
+.cartao {
+    margin: 1rem 1rem;
+}
