--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,21 @@
 body {
     background-color: rgb(100, 235, 205);
+    font-family: Bai Jamjuree;
 }
+
+#container{
+    display: flex;
+}
+
+
+
+
+
+
+
+
+
+
 
 footer{
     background-color:  rgb(189, 142, 250);
@@ -8,8 +23,11 @@ footer{
     position: fixed;
     bottom: 0;
     width:100% ;
+    height: 2rem;
 }
 
 footer p {
     text-align: center;
+    font-size: 0.6rem;
+    margin-top: 0.5rem;
 }
