--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,12 @@ body {
     display: flex;
 }
 
-
+.cartao{
+     margin: 1rem 1rem;
+     background-color:  rgb(189, 142, 250);
+     height: 20rem ;
+     flex-grow: 1;
+}
 
 
 
