--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,7 @@ body {
      background-color:  rgb(189, 142, 250);
      height: 20rem ;
      flex-grow: 1;
+     flex-basis: calc(33% - 6rem );
 }
 
 
