--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,10 @@ body {
      flex-basis: calc(33% - 6rem );
 }
 
-
+.cartao_conteudo {
+    text-align: center;
+    background-color: rgb(150, 76, 247);
+}
 
 
 
