--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@ body {
 
 .cartao_conteudo {
     text-align: center;
-    background-color: rgb(150, 76, 247);
+    background-color: rgba(141, 248, 239, 0.699);
     height: 100;
 }
 
