--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .cartao{
-    /* margin: 1rem 1rem; */
+     margin: 1rem 1rem; 
      background-color:  rgb(189, 142, 250);
      height: 20rem ;
      flex-grow: 1;
