--- a/assets/style.css
+++ b/assets/style.css
@@ -3,32 +3,33 @@ body {
     font-family: Bai Jamjuree;
 }
 
-#container{
-    display: flex;
+/* código omitido */
+
+.cartao {
+    margin: 1rem 1rem;
+    background-color: aqua;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
 }
 
-.cartao{
-     margin: 1rem 1rem; 
-     background-color:  rgb(189, 142, 250);
-     height: 20rem ;
-     flex-grow: 1;
-     flex-basis: calc(33% - 6rem );
-}
-
-.cartao_conteudo {
+.cartao__conteudo {
     text-align: center;
-    background-color: rgb(189, 142, 250));
-    height: 100;
+    /*background-color: aquamarine;*/
+    height: 100%;
 }
 
-.cartao_conteudo h3{
-    background-color: rgb(#7700ff);
+/* código omitido */
+
+.cartao__conteudo h3 {
+    background-color: tomato;
     text-align: left;
     padding: 0.5rem;
     position: absolute;
-    margin: 0.6rem ;
-    border-radius: 0.6rem;
+    margin: 0.6rem;
+    border-radius:0.6rem;
     font-size: 1vw;
+    
 }
 
 
